--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,42 +4,42 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:Hrs64d+UgJ/rIgYYxb2Z50I6h2vnS1pWCYkZDUV6k4cv8TkckcFehEDnr5DBDB1mk8hOPHFuhAfP2fy0/4m+pOM=,iv:a1HBYxeVpenGhEXkgowDxb9Th/Euyg6IIDeQa4asnMA=,tag:gSlCyYLJjtqAgxtCdAWVtA==,type:comment]
-    #ENC[AES256_GCM,data:eRjAsSsyQRTFbyQEXfcsUI+jaj6ucvVEAddV2jscNSJdVeo9AjJ2MI9zqNA=,iv:KziAoN7UUfbKR6RoNi9hebbOtxhkoHKYhjbzjMthRRw=,tag:pZdD10uXY5GuqNSag0MAJA==,type:comment]
-    VIP: ENC[AES256_GCM,data:UUdjTN93w6iQ70Lm9Q==,iv:HeoUZph0NCmq0fIJNmeOGprKf3w3Yl6AztKQHHDqa+8=,tag:Z+wpWnmTvoDYp7ot7rJW4g==,type:str]
-    #ENC[AES256_GCM,data:hIXgqAxkSsimu5kPGu7HFbsN2o+qGAMxRMyC,iv:dKf8+zRXxK1HALWFUq1OdD6nTY8FxuUJGjjZlPbG3ws=,tag:w9ra+v9rg919+grpSsp9pQ==,type:comment]
-    #ENC[AES256_GCM,data:m5IndS7Jqn1kgS7gWk04QFTl9QfS2E6xlMedVmCCV/XjJdewds9NuutQiZEhNdKLSBS/ApOpvoZSKvvYWabk/8YLLj/1zfasY3SU2eVPgqAX0IPjiMjlq+E=,iv:DyD9VC5CRVBF7+hKkF+TlPhEUpUQb7hf8T/laeiTpbA=,tag:pE3l97jRV3wkv7qN3f+47w==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:eT+lHXdY5ty7qxH1vj8=,iv:aCiBJgpH8PPgJ6hbPUrOPM4vU+54qyeBCRD8N1rd9cc=,tag:F1mNsNI4N/bN0RTY4W3Oqg==,type:str]
-    #ENC[AES256_GCM,data:ez/zpE3QfJauDdiWklpmEk7jCyJ7FAvJoxqiHGSCy+hd3A==,iv:tNoFwxywPYI/B0ImiB6VH2yNxgbNwpw3ZnhRrxEs9io=,tag:bBesfKCraiRj7D5C41Om0w==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:AnkJphCUK09DjU6xBQ==,iv:QFhmuJhsNR18fmaqfTXX6yA0stHYYgah+OAB6po26iU=,tag:JfI52S6RxiSjTlTMsR0MsQ==,type:str]
-    #ENC[AES256_GCM,data:Yb57kvMhKxVFNyfHdWUE3nxkjeiSpD62TdE8G1eH4PYvvjFmbMXPnU9UJB4W00w=,iv:p8y7SUjG+6EusESJYeeKRlBrFAIiwMQK6hnw5he6/3g=,tag:nxNJJvw2Gq3lrMMNYA6fXg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:HfBIOqRmBxH2t5HRoQaCByRjuU+/DtLfcA3rQl0Cog==,iv:fmg/a8UWcWfrRYAwzY9b0H8zeuuBL0JiisASoL11pCU=,tag:++59KNtHZJZVGtrCEzdZEw==,type:str]
-    #ENC[AES256_GCM,data:PTycmPdvB6b3asLitHGBjNO9uEis85tFPPx+d+nG40aWsiLgJSxJCSSQnzmLeyjpbRowN5Dk81fd5WSCu3VvHVxa48xmB/R9Cc6GJVg1835ouQ==,iv:PwIFx0IHqsBsc+RuWkwoW5os87yflj1BsBukBQU0QZY=,tag:kclwvboM3xskdkwSpeDCvw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:/rYynST8eVuv4fDSwzvc,iv:YQTCzyO70Q9aOX8mNa94TzdHJF6CV0gxsQNywPmju0s=,tag:CZ1T5IEXL/SVgWBB9WBuuw==,type:str]
-    #ENC[AES256_GCM,data:qnBXstYD8YVgd+n4zKkFNZs6zn3JkfSZrk/nKQCbp20z,iv:raShY4rTpXDJul8S8Y+PvsYDzhGnBFxuzVU2ViX6Nec=,tag:MXo9xfbWfN+vRxCwagP4rQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:Icxssp5FjXTTi2M7UEwQ,iv:ZGvckcDB+KPR/U0A4NIzHQZE2OTi9Vphgh6w0bRtq1A=,tag:9nXC7bHH0+TC56WLZVAvag==,type:str]
-    #ENC[AES256_GCM,data:HhxDK0m8deyrPcp/0qynxJA6up4eAJ9NsKDH/ewkd9RC5K2JNqjlxGlVxdsUe69eBw/uoqIS4M85zNkABCuilNtEyGGSEvA4yKoir27E+Hk=,iv:/ySvzHCck5Q1eY6hRGkGJAjO2Hu+BayvDPLfAevR8Kk=,tag:tHETjzHyyBYq8NIDAsL26w==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:FcmspOIS7VQxo/TO5PK4,iv:K4jHRA7+v783matXgzqVtIMmKHQtnOgovpjqyGYxhSE=,tag:D1UdXqSdyuTImfdg6bQOiA==,type:str]
-    #ENC[AES256_GCM,data:W6grq9IzT906IgKnK9cMRjIEo7pMWvekYj4ScVD8MorlJidka9r9C4oDGPigqiXc9T7eCR+d4M2m+Ae9VCJ5uXRuM0Doiy0+GHQOqP3xXEyTPD3wvf8i,iv:N1OqhO+3R0BYNTiaHw4jB299qSJv+yOnCHSW28KLSa8=,tag:tJiA5lMKTXXnq7HQWmMklA==,type:comment]
-    #ENC[AES256_GCM,data:KEHqKgp5LjeO8c2evaq610fxZeBFujGG2Vjc15ukRmodR5edKLmvVa5NvkqLpsKtdl8D19vJ29x1tZMZoYImyv8iFvto4vEonIiLYCH5XSWmgOGEr9Yky+C9WDxz3zhaeoqCqrMwICikDCCV5fX+yL3TkCartOiDStxjow==,iv:8kVEx1y011sO5iVRrn9SVsL9PvPbbUuO2Zqp1C68sao=,tag:9UIcO4GYQJsCaQJHtU0v8g==,type:comment]
-    #ENC[AES256_GCM,data:3zB1mJ4GmDHmMrrXtz4MQV2VBCLzFw/NhsY8jB86XG4hXC+v2Z7swPs4xduOeoDdjBImZeKMoO3oIyMCXon3RH50VMzGfV7T/0pvnmlCqhs=,iv:JAsRMCpN50FUSYYB1zCKZ/8udTBG0279IlcAV6q3VE4=,tag:aX5cKyiE/umVBT/k2nfYfw==,type:comment]
-    #ENC[AES256_GCM,data:eMrrCkRe/CzArk3MihXdVyNJ1maAX4pAvNZhmN+wDN5+tTdpR6NE8kb6q5bJ8B9kneaoblrp,iv:sNF4PiSJ39fLClGRHB/xdRnvLFcQpuqiqA7lwNgNC+o=,tag:GYynb/trZKmR+MKpz/oegg==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:PmOEbqy0cCCPYPkHIW8=,iv:ZFnMM/tEO+sfQi9hXnZqPe8OOM3SMSTNkCJEwIiFPNw=,tag:97NYnRjf6KORs3BrcTupuQ==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:YLw9EGW3sJfeYC3J,iv:sBfx58iOnojS3v625jIG0OjQuD2UmRSRN4qt3GLOumE=,tag:3fe72m/PwSUzC+GAnqWbZQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:beGeL9OPu8Vks6Ak+B802h0=,iv:HjjLqFZ18EUk0lfuKU8Uwr0VY0oMwDHKeSw3QQwsofA=,tag:aYVdxb5brXWeHy0pfpxxLQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:VTyBKUhDlPeI7P3CggsxM9AFonr59GGvhQzvdWZjardy1TiQH4zCOQ==,iv:ueqCOzfpqlxK7NvlvWCjh/l8De5jbXoxVyPl5nDKH+A=,tag:3OmdQMal3K3SR/Xr3otCeA==,type:str]
-    #ENC[AES256_GCM,data:N97HCHWzLltlYCeoNiGGRomvrHOVGXyZDENClBDkUukJ0dp3Rl0cDg1HTguMAgdLKPvI7hwwfZg=,iv:xEnYGqnqR9AVNLU00zhz40foEsDsuqw+z5JschgocDY=,tag:LrydzP4byFKoanjWy3Y0BQ==,type:comment]
-    #ENC[AES256_GCM,data:2Oc9gYVQbt4s0m8cGUe8aCjfE2J94fit6w==,iv:bxewRt3xbwQ+e4tfxwRVdnIo6XwBGiPINTnjeS/2FlI=,tag:E3n+hL53L6FBLtH/uRWc1w==,type:comment]
-    #ENC[AES256_GCM,data:MBzqc80TtPk8EaAei1eqhlRetMVnzrnnW6JUeBIfawq3YhjsRAY+cDwszVkSZsDwqg18md7K9obpNs8e/dXoQ4ms5fh+dgd/LnQcCZc=,iv:PGXMP1os0VrHWkvbo9nvN7AtfritgdL2nH8i4PnH3yY=,tag:SQNtSj3SgRvUIZ5lPI06+Q==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:3SyMNpOBDJXEATX3y3HX7KBl8InHI4Ms+4nyMwwpKCkekouJAUY5GAUvCm2E/qzC,iv:wN4nctlKY9hbrrwR2OXltt2JA6xX9ISTIdPxQBbz29k=,tag:r3IMRN8Q9nR9wxCH59AGvw==,type:str]
-    #ENC[AES256_GCM,data:gLxYM/YVrvH1z9SjREuE2n+3UHgzvMObF897JFacTFSSMs0L0aYG+wRg69NvKfv8DmsyJL98qro1yFZXczSljzrfNmxIH0I=,iv:p4h8xXLrce0u3PkpV2sHFNflc9xg2O5+ImCCmNe/GV4=,tag:Gr502gNrtTSoDfSVN4dKMA==,type:comment]
-    #ENC[AES256_GCM,data:ptPhS6eGq0ptxuoIWJUVlH6KAZcSJmjwBGkceOl6R5KrdAnmEWyEUD0fxGgRomDqSLTpxg1p,iv:3GO/sq2TKQ6SZrbXsrVdkPZAlPPe5AcdmFwuB/1T7v0=,tag:x0AGNZDmQXQ7PB6F0S97lQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:fr+5cDWAHQ==,iv:26o9RPeoNl0xDTHhVqAHybr3VOEgPImmo4PEg6hl+l4=,tag:mll4Wv9+sfpwQo5QtHkvzA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:1gyc8f6sG91I4Fbr3xxs4ptT6B8=,iv:nGUtFE4Nlu/fQeneNYQ5rjTiKo0hR0+abl+E2QuSJl0=,tag:fiaGgr8kjAyaFGtYlcHMog==,type:str]
-    #ENC[AES256_GCM,data:3rOekJWZeiwUHLAQFg8=,iv:z377re8DKYMngUliW6o99T+JccFjhCpME0PN8PPUvCE=,tag:HRwhKq0+gJSlH7LvedqFjw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:qU58Rl3UfSnJ8spFSA==,iv:VKwwBkZT0BpJ0IG8jN14rHkpQVO+oALAOWOKs1MoCTE=,tag:rvPH6CXDan9Qhf/OsXrfiA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:tVYOepiuoL5b5H1xSA==,iv:GaclvDpSjlj3I2+bTXj6D7etoqCc1LPJ2OV6fR2SiIA=,tag:HFK2M/t/1hUBPpiYaYiWog==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:D+dUog==,iv:/8akgNaUKe88ox2S8DL/KlmDPnNgncjHClG7jIbQlVs=,tag:yqyoeyTL05rsS8gqtWEZ1w==,type:str]
+    #ENC[AES256_GCM,data:+lvZfEx39a/w77YoI7X3K60wd7WVt6p58xSH7mS51RNCD2cUFX8jcyRtsar3tbeIyfTAmHX32IBr6RvFs2P5kvY=,iv:bIbPlhA6GQluuezrkHLhCUg6EE3hma9CJbDZ3rzk+Go=,tag:23uKQsi7PBszyBhkHntGFQ==,type:comment]
+    #ENC[AES256_GCM,data:ARfYKWw+onHIPs+zLIoqBGHxGCZDCOdi1V22CJIol4Lj6Tl6jJ8RI1uIVOo=,iv:BLY9TlPXD1VbrPnibZQf8FFEXC6DzTHcgArhqrSuSIc=,tag:Kt8ogdnGPS4k1mR1HTdtPg==,type:comment]
+    VIP: ENC[AES256_GCM,data:4oUFNg/H/P81lY4SfQ==,iv:+MdZgo1SpuhTbcyu5+5KhN85/+KlToO/el+HGwVf+yw=,tag:G1KXekstRK13f7pmMcyNHQ==,type:str]
+    #ENC[AES256_GCM,data:zteY2kd36FYvb/q8XsKdC4wDB82A69R6ITaD,iv:ySUw9wn2h0ByhNI9pPpHn5jxmkJoRRozrYjwthXmQJU=,tag:t2CqGJyRXX0hO7UvbIdWyw==,type:comment]
+    #ENC[AES256_GCM,data:qWiPM2ICbx4zbrMAV/DI9aBNHpmNMNvD3lyFEeTr7Lfkbx9NOYQdDnC82WsulRqPbb3v6T48vlRn+LBEEbsC0zzJHfHXmzzeEScY0S6zrFk64Loq81Zh87I=,iv:MwPtH2qeurSAecCc6OjZRzuSDHghzbJnN+JZfZixMW0=,tag:AMAqahI3YxcUcvOy6Be5fg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:8PVoH1oDcncpWx328sk=,iv:m7asDx5GPn+RdNi/ijNDaxzzDPZIiwwdLNkNMfXyIdU=,tag:bj/9ZUimHJcinlm89xuV9w==,type:str]
+    #ENC[AES256_GCM,data:XoGBv+fIwfmqAc9GfdTQqvKnAbWM2itqNRjaTQRwPztr0g==,iv:9VIKAMj2ue7Z2l8Kou5VtUSL5oiPaujL4Bz19GpvduY=,tag:yrVug3m0tx0J4Xpm97Gtsw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:5Oek45iK7ti0L+rF/Q==,iv:Xb+bkYg6bhznPRwN8aGfPatz4muO0v9aTF+juWzVqtk=,tag:FdTCX2AZS3iM/BxKjQrzrg==,type:str]
+    #ENC[AES256_GCM,data:2fS1o+Y+r6fm0x0Wp17FSgiTmZC4VF8b/WFZDZ3vj540gXO09GLsaEDN63jCzwY=,iv:0fQ7qWCadNVORpYhjB+IZeSPThi6CYxJ2rLF5ibeuJ0=,tag:tdTk3a71iUJgVicNvmoJow==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:40ZoKeSGNq3MesSkMKn6Y4eyALcPkR8B89+65zhiXA==,iv:Vp/lLc6e6xtSHTKcpTngDgsvgxg7VtUNOSmyrcR9mdk=,tag:V8oEnIFwCQi94x7ZnZLJCw==,type:str]
+    #ENC[AES256_GCM,data:EB1t9GJqhabUB0bfVbP86a52r/k57yZgVoF61XoV2SolMwrSKQmoPUiOnbJZge3KLa0KRKAmar2pzwR4GeOcpO1KaTvgnMU2G6EbRIyKR+EiLg==,iv:a0CqeJXQjQszk9t4ndA8HLyxJdRZCPKl8MAR8OIvCbI=,tag:INa26q6r6cxJoxKCbgxLnw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:zn/ijNc1Zto3LHDx6QHk,iv:0wVRiYQfWwzSn0XtLnmKu0ZVUGqyivBoss/OW/5qkF4=,tag:IJsBDBl4ZwRMTViq4ziBKQ==,type:str]
+    #ENC[AES256_GCM,data:0PzZ3EUs6PbZeGaHE2sZh/0Ekb+7KhHonLdLRd+zuY3k,iv:6ImzSHzRn29gNo9+oMFWe/E8B45bj3X9G6vDpbV8K6E=,tag:ivYDkOkudY8ORkHgUqHfNg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:Pdz0LC1YSzMjwX+J0lze,iv:4rbbRVFFGECAFNcS9sFs4JXmHCJZot507uApEt75pAY=,tag:ZZb7FsLIP4YdDyZETa/qsw==,type:str]
+    #ENC[AES256_GCM,data:V3DhLQlRID77mEretJvS9GOmbbNTR9DcggaBqLV3+zsJoDpOdHe3bA9es0JzJ8QIK1jy3bFsbnWvbzn398iDMmaqz0tw8Nsb+ad6XB3ZJto=,iv:dHafuU6ipPO5rl7dTcpvHjg+d7UAhP49EWOOOTbuvL8=,tag:v+rOACL7UfNhw9+Fpb0mhA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:kqawGo6j6Dd3KeJAMzjM,iv:TpSsEqY9nU+4AB4R23fSYFTGBNEqF9Is1YRvIgqFttU=,tag:rHC/SLXVpv1VlFkhUhY2ig==,type:str]
+    #ENC[AES256_GCM,data:MV8Km7JG499F4qVVm9c5I4QM6Epx9z9sC4jQzWPbGJNEJAtr0MOxlm87JCIu/QKFP6+4m0aNNOFNl9UlHzGPP5dGeJ9vLx3Zd6XVUa5rbwUQsTubMErw,iv:RQxy6J0Z3ZqPgZj9x3jLGzBaSxKt2KlBlDSKPeP+QWM=,tag:7XBQDG8BGjU+QYWWoG65aQ==,type:comment]
+    #ENC[AES256_GCM,data:AGvE7c64rbRbBIHY10UmM3eUdyYbXNZunTHAmE667AD+cAi9chGylp52A6xvL5lxp5j/wMQ7PVS3fEtqfgVCQ8IVuvn9U1ljuDeJg8XR8IwbKIclGGTn5xKt5ZFuaGr1zrq45UFxKGRefeVG3tKsv+z0NV1EPTkgYuAcEw==,iv:fRtNir+q7/gCi6UF40GLD5Osz0zcqZ1aW+i4ouqrcx8=,tag:/gGgIZl2f7nfrus+sG9Z6g==,type:comment]
+    #ENC[AES256_GCM,data:krkzpYsAT6eh9NUFRANbdDXo0g8woAcAvZyjZsba/UpzcPq/N0UKLdWBDv8GRIPp0lJ69UFugqv7Uwf+EzwUG8VnCWevq6HFrk2ugK/Mm1c=,iv:wccDDx0eBnUX0EYbv5+22MiNGBdFvn4dlLgmF9Ea08s=,tag:o2w2i+TDPpqt5YKfMfORwQ==,type:comment]
+    #ENC[AES256_GCM,data:K6NOi56ybn3RwCasvUdjDgZ0JjwQ12OkIVPrbYv89SkLiesXfJ5082TiAKpqVh2N61aA0wR7,iv:8d879Y9TDaBSGkEOXi85ORfKpFiqKpnB74u+jEN2aFU=,tag:iR+XCpe4xtosqe28wuk2Gg==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:RQNU0Qm9kEqIAp3Cj6c=,iv:BHS/j6lJHQa2MmvGivIgY47TOA9UGvi+5zpdsDYJIcM=,tag:xX4+MytUhySKMC2foZjovA==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:3IbDM+hGFQ8Es0gQ,iv:6UXYrlEgvxn9XLt6/fM3kc2qB0r0UNZAikCUFxCfWuI=,tag:HjxQuAGYRGFXbmpNdeIa4g==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:z1acbFwN7jcMYu3BiXYuYSU=,iv:fp/FL6ej6lw51lLoovfLhMUUvQes14579pOqGeT+Q70=,tag:UiPZ2OasW2qOn/zW+czteQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:4VX0zaj8b4XYdSTgznShrSjJwBaBHhArzDnoktKX1ilAMCikniykgA==,iv:LTc4MXosV4gsIFnS3eYwcf0k0imz2hotURNrc6uSfYE=,tag:eqN3VUzsO5PtHv6hLfkCiw==,type:str]
+    #ENC[AES256_GCM,data:V2IjeerjqGB42CMsGWjZwW1CmqfJWMf94fEH7BE2wBVXVLPqV/9X14rimTZkhhM33qjBMpunhJM=,iv:NVNdhg3H80GsnFymA+js8Pn/H+fvuwk0zFjFx0sc8MU=,tag:Sb/yrmk47W3iNx63cL6IMg==,type:comment]
+    #ENC[AES256_GCM,data:CaSdqCUcc3y9oZU4QUwDASPTEY3EcG4hqg==,iv:PrwQvVuC2F6vyYIDkHhM9kPukwUFiq71x1XeggdWpKw=,tag:DRG42lbQvNSnoNtfDAAGZQ==,type:comment]
+    #ENC[AES256_GCM,data:oo2Ue5X05hGYgHOELjU6g+2KaDBTqU/jThN5taPfm5SkM+BCVTSqp4NT8mMTVfBNPJp7nxicGvYnJWfO9c4Tgoodm1qaQjgdOK/Slig=,iv:vHzD0i0VzgCto+hhwESDnnEzVPoQfrYmqchct8qlSIQ=,tag:EW+QGyIeqPaTFKwWKjLnvA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:6vgyIMk0awO7/iNi35cDOZ2jaWT0r84QpiOrhjWZzND78zDl1BgK9uJIglcfG8oW,iv:G7WH+SPYxKlGk0ORZkGnJu1+vJEmjIjJY1jQLJ540r4=,tag:76eMh6bzoj6S2pXxT+kATg==,type:str]
+    #ENC[AES256_GCM,data:4YYvX9BVEKvKecMxuHOY2SuehnB9LN9cuBe1vOxsbFbLH0b1ukq4p5X57VPLCgrmsPghmkd2NXb2IiB+cS9sRaJJw+wwOB8=,iv:2Et2HqgrGWLtT3qdiuHqYF2fwspBaNlUPFiyoopw+A0=,tag:eArat9pLPRuGxTvBy/yPFA==,type:comment]
+    #ENC[AES256_GCM,data:1S2Jui3u3ZKtwXbVLUr3hW6TW8YN9W4xYkITn7dRi0pwBubTvghQca2YVIRs2sblorsZrY+P,iv:k4RFZ7yxdWKHgOWCb4SQf+eBsQPhR6L3tsSofXFMl/I=,tag:H+QMqpG9d8p0KRsIXn2UEg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:ia8AHpU/uw==,iv:DIouUa6gIRKv8Y3y+Er5EtVqjVQLUuFP+jB5iQi+7zI=,tag:GiLFNdTjQ9btgphdXiyfpg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Xk6Mi7ClL39q0vWVDOak14u9r94=,iv:pGfhhseRLHsyKPN+dDJhXlVfZvMxo+W0++KXE39eXmY=,tag:e4G5CeijwCeK9WF6z+wY1w==,type:str]
+    #ENC[AES256_GCM,data:C2Yc2gfCod9MQnTMWvo=,iv:SC+/lefogOvhnTr5/xuogFOikJUmwv4ufZAdMvLonbs=,tag:2ew9YRNo9N3HXHQZPnZM3A==,type:comment]
+    PODNET: ENC[AES256_GCM,data:hYHXms2+oVzGSFtwlw==,iv:fqORseMSau6nhoCRUchyaVfGk5YYzvyBfRZ85++aU68=,tag:wzNiy3jpWx8/9gFMCqTtRg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:7bToZNQIQ0FeJ3AcZg==,iv:eafwcZYCCJTRBhT5dI+9vu93NqyiIYhZYBG5DAqJ/xU=,tag:jfuDMcBogpQ8kAOQUKfqPg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:tHhWoQ==,iv:CsVO9oGeY/Ej8yZzRO34F1BAZnS6rcJuMgZ6+PqmlUQ=,tag:mUoLHTzcl+x577xo4th/jg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,14 +50,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNQlYyRCtnWWs2Nk55TSsy
-            TFk5dnFMNkZ5RG1EUVByZkpEUTJNSUVUNGxnCjN1NmQ1Qm5nMXlkWWRuUTRNTXZP
-            QUpicGxGSGRxbjhoaTE5UlRPSnFibDAKLS0tIGhiaGNCUzJnZjEyTGJkYUhndkxx
-            NmJsNzhFVEFweHcvc0Rzd1p5KzFOdVkKHc+5ZFoNgyu7tgz6gcwe95cvjva1F9OJ
-            QO26LBsLJnUVIbcLgZ7NTNFcQ5ibDJdwjV3oYimaYMjHqzve+GIOfA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwc2VCS21GTDBYSGc2U0c3
+            VnVPWVFCdEdlczdzdWkzYjU0dTZFa2ozV0ZzCjdsdlBIcjlDTFhEK2t5aUM2eEl4
+            aDY5Q3AwcmZEN1lyZU9tbStINmpVcW8KLS0tIEpJcEo4UDVENmRFSHAvSlliTU5V
+            ektHeERnNWpFd0R3aURQRnVseFRMSFEK1JC4lVMDEnRpnrXV92/zk3AtqHHPvnb0
+            5NcZ616Q+TtArdEGr3amCxAnz8ShTVi69yf4WYhgfGLiwo1ZibYWVg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-27T00:35:50Z"
-    mac: ENC[AES256_GCM,data:i1MYWYcDPd2fn9PJs0ECSKNADHyrMQWc0fz6p/yssV4huooLC8OwZHV29pPzLSAIkRxuDQl+xt438QrW/fWt1yt8IUuzyGo+g+VP0CkosYnTcUnlmNqgEcqvVaKOtOpt4sZtQkFWa3zx83vIMimhZvBU6iY7ORjP9P82f9cteo4=,iv:i+HUUAyRc0e8dXFVojxiydz1pmpymOx7g0mOJk3HrDc=,tag:J+AbgmE0HkzQ6Yx2Nd6wrw==,type:str]
+    lastmodified: "2024-12-27T01:01:08Z"
+    mac: ENC[AES256_GCM,data:GNNXttuUVUbI27OjX7U4NFsAANNXZwKHNr2LLtk3PEU1MUgaf61nj3Q6FwKCBEJMGafGN9iCgWCcBiPV/MUlWdn0i9Rkw99sNUE9Jiw5T51DhAXrmdBaySA9JEnqm1EJSsROLL+Vq6aadiWzZ6SX/0RYSxdB+i/2OmVsCsH0+aw=,iv:QeJ0WS5mn2LmtVUStGD0MIl597ujei7Yl7Rl2D6+L3Y=,tag:bAV07zh+3rbrFeevCC18Uw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
